# control-coupled_control

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  coupledControl.cpp  coupledControl.hpp
test/: CMakeLists.txt  test_Dummy.cpp
